--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
     "react-native-svg": "^15.6.0",
-    "react-native-swiper": "^1.6.0-rc.3"
+    "react-native-svg-transformer": "^1.5.0",
+    "react-native-swiper": "^1.6.0-rc.3",
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
